# d-inference

./: .gitignore  .gitmodules  .golangci.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  issue-115-bug-flow.excalidraw
.claude/: continuous-batching-status.md  swift-migration-plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/scripts/: threat-model-review.py
.github/workflows/: ci.yml  claude.yml  codex.yml  integration.yml  release-rust-bridge.yml  release-swift.yml  threat-model-review.yml
console-ui/: README.md  package-lock.json  package.json
console-ui/__tests__/: api.test.ts  earn-page.test.tsx  pages.test.tsx  setup.ts  stripe-payouts.test.ts
coordinator/: Dockerfile
coordinator/api/: acme_verify.go  billing_earnings_test.go  billing_handlers.go  billing_integration_test.go  cache.go  cancellation_integration_test.go  capacity.go  consumer.go  consumer_test.go  device_auth.go  device_auth_test.go  edge_case_test.go  enroll.go  enroll_test.go  error_response_test.go  fullstack_integration_test.go  install.sh  install_sh_test.go  integration_test.go  invite_handlers.go  leaderboard.go  load_integration_test.go  me_handlers.go  metrics.go  metrics_test.go  model_catalog_filter.go  multi_provider_test.go  openai_compat_test.go  provider.go  provider_serial_allowlist_test.go  provider_test.go  pseudonym.go  pseudonym_test.go  ratelimit_middleware_test.go  recover_middleware_test.go  release_handlers.go  routing_metrics_test.go  runtime_manifest_test.go  scoring_integration_test.go  security_test.go  (+14 more)
coordinator/attestation/: attestation_test.go  mda.go  mda_test.go
docs/: ARCHITECTURE.md  hermes-nomad-hitl-deploy.md  release-runbook.md  threat-model.yaml
e2e/: benchmark_test.go  integration_test.go  profile_test.go
landing/: earn-calculator.js  index.html
papers/: dginf-private-inference.tex
provider/: Cargo.toml
provider-swift/: Package.resolved  Package.swift  README.md  entitlements.plist
provider/src/: coordinator.rs  inference.rs  main.rs  protocol.rs
scripts/: e2e-runner.py  fetch-metallib.sh  hermes_nomad_deploy.py  install.sh  mlx_lm_batch_bench.py  profile.sh
(+236 files in other folders)
