[package]
name = "darkbloom"
version = "0.4.8"
edition = "2024"
description = "EigenInference provider agent for Apple Silicon Macs"

[[bin]]
name = "darkbloom"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for backend health checks + proxying)
reqwest = { version = "0.12", features = ["json", "stream"] }

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Futures combinators
futures-util = "0.3"

# HTTP server (local mode)
axum = "0.8"
http-body-util = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Unix signal handling
libc = "0.2"

# Misc
dirs = "6"
chrono = "0.4"
once_cell = "1"
backtrace = "0.3"

# Terminal UI — raw key input for interactive model picker
crossterm = "0.28"

# Crypto — NaCl-compatible X25519 + XSalsa20-Poly1305
crypto_box = "0.9"
base64 = "0.22"

# SHA-256 — streaming hash for model weight fingerprinting and binary integrity
sha2 = "0.10"

# Secure memory wiping — prevents decrypted plaintext from lingering in freed memory
zeroize = "1"

# Embedded Python — for in-process inference (Phase 3)
# Links the Python interpreter directly into our binary so inference
# happens in our hardened process. No subprocess, no IPC, no sniffable channel.
# Behind a feature flag so `cargo test` doesn't need Python linked.
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }

# macOS Keychain / Security.framework (host-only)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"

[features]
default = ["python"]
python = ["pyo3"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
